# stock-purchase-analyzer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
assets/: StockAnalyzer.icns
config/: settings.py
config/prompts/: macro_economist.md  moderator.md  risk_manager.md  sector_analyst.md  sentiment_specialist.md  stock_analyst.md  technical_analyst.md  trend_forecaster.md
scripts/: run_analysis.py
src/agents/: base_agent.py  debate_engine.py  llm_provider.py  macro_economist.py  moderator.py  risk_manager.py  sector_analyst.py  sentiment_specialist.py  stock_analyst.py  technical_analyst.py  token_budget.py
src/data_collectors/: aggregator.py  base.py  economic_collector.py  employee_sentiment_collector.py  fear_greed.py  fundamentals.py  insider_collector.py  news_collector.py  price_collector.py  reddit_collector.py  sector_performance.py  technical.py  twitter_collector.py  world_news_collector.py
src/db/: __init__.py  analysis_repo.py  database.py
src/models/: analysis.py  portfolio.py  stock_data.py
src/services/: analysis_service.py  market_overview_service.py  portfolio_service.py  trend_forecast_service.py
src/utils/: stock_filters.py
streamlit_app/: app.py
streamlit_app/pages/: 1_Analysis.py  2_Portfolio.py
